--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/the-cranberries/test-room2#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.3",
     "socket.io": "^2.3.0",
     "three": "^0.116.1"
   }
